website/websites/u64q/code/fib50.1.pyston.log

 Fri, 30 Oct 2020 19:05:30 GMT

COMMAND LINE:
 /usr/bin/pyston fib50.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fib50.pyston", line 12
    print '%.0f' % fib(50)
          ^
SyntaxError: invalid syntax
